--- a/css/styles.css
+++ b/css/styles.css
@@ -313,21 +313,25 @@ main {
 
 .tempedia .tempedia-container {
   position: relative;
-  min-height: 75rem;
+  max-height: 100%;
+  min-height: 50rem;
   background-color: #ffe5b6;
   margin-top: 2rem;
+}
+
+.tempedia .tempedia-container .img-bottom {
+  position: relative;
+  z-index: 0;
+  display: block;
+  bottom: -1.6rem;
+  right: -0.7rem;
+  margin-left: auto;
+  opacity: 1;
 }
 
 .tempedia .tempedia-container p {
   text-transform: none;
   color: #e94444;
-}
-
-.tempedia .tempedia-container .img-bottom {
-  position: absolute;
-  z-index: 3;
-  bottom: -1.875rem;
-  right: -0.625rem;
 }
 
 .tempedia .tempedia-container .tempedia-text {
@@ -336,7 +340,6 @@ main {
   display: block;
   position: absolute;
   margin: 0 auto;
-  top: 10%;
   right: 100%;
   width: 90%;
   opacity: 0;
@@ -399,14 +402,15 @@ main {
 }
 
 .tempedia .tempedia-container .temtem-card {
-  margin: 2rem 3rem;
-  padding: 2rem;
+  margin: 0rem 3rem;
+  padding: 3rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all 0.3s ease;
