--- a/css/styles.css
+++ b/css/styles.css
@@ -527,4 +527,59 @@ main {
   clip-path: polygon(0 3%, 0 33%, 1.5% 45%, 2% 99%, 53% 97%, 100% 100%, 99.5% 70%, 98% 44%, 99% 1%, 65% 3%, 36% 1%);
   -webkit-clip-path: polygon(0 3%, 0 33%, 1.5% 45%, 2% 99%, 53% 97%, 100% 100%, 99.5% 70%, 98% 44%, 99% 1%, 65% 3%, 36% 1%);
 }
+
+.matchups h2 {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.matchups {
+  margin-top: 6rem;
+  margin-left: 48px;
+  margin-right: 48px;
+  background: #e94445;
+  display: block;
+  padding: 5rem 0;
+  border-radius: 15px;
+}
+
+.matchups .damage-content img {
+  width: 30px;
+}
+
+ul#matchup1,
+ul#matchup2 {
+  padding: 0 10rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 1rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 1rem;
+}
+
+li.damage1,
+li.damage2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.5rem;
+  background: #faa34a;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 5px;
+  gap: 0.3rem;
+}
+
+ul#matchup2 {
+  margin-top: 3rem;
+}
 /*# sourceMappingURL=styles.css.map */
